unscd (0.53-1.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * Add systemd notification support for startup error reporting.
  * Move Homepage into the source package (for the PTS) and use HTTPS.
  * Enable hardening.
  * Let systemctl help find the man page.
  * Switch to HTTPS in the watch file.

 -- Ferenc Wágner <wferi@debian.org>  Thu, 31 May 2018 12:03:28 +0200

unscd (0.53-1) unstable; urgency=medium

  * New upstream revision
  * Update standards version to 4.1.4, no changes.

 -- Don Armstrong <don@debian.org>  Fri, 27 Apr 2018 17:22:07 -0700

unscd (0.52-2) unstable; urgency=medium

  * Update standards version to 4.1.1, no changes.
  * Add missing #!/bin/sh to postinst (Closes: #843283)
  * Use compat level 10
  * Do not stop on upgrade, just restart after upgrade
  * Do not always print debugging info upon invalidate. (Closes: #844447)

 -- Don Armstrong <don@debian.org>  Thu, 26 Oct 2017 15:52:19 -0700

unscd (0.52-1) unstable; urgency=medium

  * New upstream release (Closes: #795618)

  [ Thanks to Chris Kuehl <ckuehl@ocf.berkeley.edu> ]
  * Add manpage for unscd and nscd (Closes: #789871)
  * Add systemd unit file (Closes: #795621)

 -- Don Armstrong <don@debian.org>  Thu, 03 Dec 2015 10:40:56 -0800

unscd (0.51-1) unstable; urgency=low

  * New upstream release
  * Silence the cache invalidation output (Closes: #622230)
  * Update to debhelper 9
  * Support at least INT_MAX numbers in config (Closes: #676689)
  * Use saner settings in nscd.conf; thanks to Harald Dunkel (Closes:
    #702211).
  * Run unscd as the unscd user instead of root by default

 -- Don Armstrong <don@debian.org>  Mon, 21 Oct 2013 17:02:22 -0700

unscd (0.49-1) unstable; urgency=low

  * New upstream release

 -- Don Armstrong <don@debian.org>  Tue, 07 May 2013 11:54:45 -0700

unscd (0.48-2) unstable; urgency=low

  * Actually distribute the nscd binary and configuration file (Closes:
    #657721) and locate a brown paper bag.
