@@ -6,6 +6,7 @@ unscd (0.53-1.1) UNRELEASED; urgency=medium
   * Enable hardening.
   * Let systemctl help find the man page.
   * Switch to HTTPS in the watch file.
+  * Use libsystemd-dev on Linux only.
 
  -- Ferenc Wágner <wferi@debian.org>  Thu, 31 May 2018 12:03:28 +0200
 
